--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
     <p>the value is in silence.</p>
     <small>it started again. 🔇</small>
     <div style="margin-top:40px;">
-      <a href="https://x.com/YOUR_USERNAME" target="_blank">x</a>
+      <a href="https://x.com/whisprcoin" target="_blank">x</a>
       <a href="#" target="_blank">solscan (soon)</a>
     </div>
   </div>
 </body>
+
 </html>
