--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
   <div class="matrix-lines"></div>
   <div class="content">
     <h1>whispr</h1>
-    <p>the value is in silence.</p>
-    <small>it started again. 🔇</small>
+    
+    <small>the value is in silence. 🔇</small>
     <div style="margin-top:40px;">
       <a href="https://x.com/whisprcoin" target="_blank">x</a>
       <a href="#" target="_blank">solscan (soon)</a>
@@ -84,3 +84,4 @@
 </body>
 
 </html>
+
