--- a/index.html
+++ b/index.html
@@ -68,6 +68,25 @@
     a:hover {
       color: #ffffff;
     }
+    .footer-links {
+  position: fixed;
+  bottom: 25px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  z-index: 2;
+}
+
+.footer-links a {
+  color: #9c9c9c;
+  text-decoration: none;
+  font-size: 20px;
+  margin: 0 15px;
+}
+
+.footer-links a:hover {
+  color: #ffffff;
+}
   </style>
 </head>
 <body>
@@ -76,12 +95,13 @@
     <h1>whispr</h1>
     
     <small>the value is in silence. 🔇</small>
-    <div style="margin-top:40px;">
-      <a href="https://x.com/whisprcoin" target="_blank">x</a>
-      <a href="#" target="_blank">solscan (soon)</a>
-    </div>
+    <div class="footer-links">
+  <a href="https://x.com/YOUR_USERNAME" target="_blank">x</a>
+  <a href="#" target="_blank">solscan (soon)</a>
+</div>
   </div>
 </body>
 
 </html>
+
 
