--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
     
     <small>the value is in silence. 🔇</small>
     <div class="footer-links">
-  <a href="https://x.com/YOUR_USERNAME" target="_blank">x</a>
+  <a href="https://x.com/whisprcoin" target="_blank">x</a>
   <a href="#" target="_blank">solscan (soon)</a>
 </div>
   </div>
 </body>
 
 </html>
+
 
 
