--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
-    body {
-      margin: 0;
-      height: 100vh;
-      background-color: #0b0b0b;
-      color: #fff;
-      font-family: 'VT323', monospace;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      letter-spacing: 1px;
-    }
+   body {
+  margin: 0;
+  height: 100vh;
+  background: url('https://github.com/whisprcoin/whispr/blob/main/5.png') no-repeat center center fixed;
+  background-size: cover;
+  color: #fff;
+  font-family: 'VT323', monospace;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 1px;
+  backdrop-filter: brightness(0.7) blur(1px);
+}
 
     h1 {
       font-size: 80px;
@@ -103,6 +105,7 @@
 </body>
 
 </html>
+
 
 
 
