--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    body {
   margin: 0;
   height: 100vh;
-  background: url('https://github.com/whisprcoin/whispr/blob/main/5.png') no-repeat center center fixed;
+  background: url('https://raw.githubusercontent.com/whisprcoin/whispr/refs/heads/main/5.png') no-repeat center center fixed;
   background-size: cover;
   color: #fff;
   font-family: 'VT323', monospace;
@@ -105,6 +105,7 @@
 </body>
 
 </html>
+
 
 
 
