--- a/index.html
+++ b/index.html
@@ -89,10 +89,44 @@
 .footer-links a:hover {
   color: #ffffff;
 }
+    .whispers {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: 0;
+}
+
+.whispers span {
+  position: absolute;
+  color: rgba(255, 255, 255, 0.1);
+  font-size: 18px;
+  font-family: 'VT323', monospace;
+  animation: whisperMove 15s linear infinite;
+  opacity: 0;
+}
+
+@keyframes whisperMove {
+  0% { opacity: 0; transform: translateY(0); }
+  10% { opacity: 0.4; }
+  50% { opacity: 0.2; transform: translateY(-40px); }
+  90% { opacity: 0; }
+  100% { opacity: 0; transform: translateY(-80px); }
+}
   </style>
 </head>
 <body>
   <div class="matrix-lines"></div>
+   <div class="whispers">
+    <span>it started again.</span>
+    <span>can you hear it?</span>
+    <span>they woke it up.</span>
+    <span>not again...</span>
+    <span>silence speaks first.</span>
+  </div>
   <div class="content">
     <h1>whispr</h1>
     
@@ -102,9 +136,22 @@
   <a href="#" target="_blank">solscan (soon)</a>
 </div>
   </div>
+  <script>
+  const whispers = document.querySelectorAll('.whispers span');
+  function randomizeWhispers() {
+    whispers.forEach(w => {
+      w.style.top = Math.random() * 100 + '%';
+      w.style.left = Math.random() * 100 + '%';
+      w.style.animationDelay = (Math.random() * 10) + 's';
+    });
+  }
+  randomizeWhispers();
+  setInterval(randomizeWhispers, 15000);
+</script>
 </body>
 
 </html>
+
 
 
 
