--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
 
 .whispers span {
   position: absolute;
-  color: rgba(255, 255, 255, 0.1);
-  font-size: 18px;
+  color: rgba(255, 255, 255, 0.25); /* 🔥 jača vidljivost */
+  font-size: 20px; /* malo veći font */
   font-family: 'VT323', monospace;
+  text-shadow: 0 0 6px rgba(255, 255, 255, 0.1); /* lagani sjaj */
   animation: whisperMove 15s linear infinite;
   opacity: 0;
 }
@@ -151,6 +152,7 @@
 </body>
 
 </html>
+
 
 
 
