--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="c80a8720-3b49-4215-becf-2a0e9a46da28.png">
+  <link rel="icon" type="image/png" href="whispr.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>whispr</title>
@@ -206,6 +206,7 @@
 </body>
 
 </html>
+
 
 
 
