--- a/index.html
+++ b/index.html
@@ -140,13 +140,14 @@
   z-index: 5;
 }
       .whisper-box{
-  margin-top: 28px;
-  display: inline-flex;
-  gap: 10px;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 92vw;
+  gap: 10px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 100%;
+}
 }
 
 #whisperInput{
@@ -349,6 +350,7 @@
 </body>
 
 </html>
+
 
 
 
