--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 }
 
 #whisperInput{
-  width: min(420px, 80vw);
+  width: min(700px, 90vw);
   padding: 10px 12px;
   border: 1px solid #2a2a2a;
   background: rgba(12,12,12,.8);
@@ -238,7 +238,7 @@
     <small>the value is in silence. 🔇</small>
     <div class="whisper-box">
   <input id="whisperInput" type="text" maxlength="140"
-         placeholder="write your whisper below... no one will know.">
+         placeholder="send a whispr. it will be heard by everyone.">
   <button id="whisperSend" aria-label="send whisper">send 🔇</button>
   <div class="whisper-note" aria-hidden="true">anonymous · not saved</div>
   <div id="whisperStatus" class="whisper-status" aria-live="polite"></div>
@@ -350,6 +350,7 @@
 </body>
 
 </html>
+
 
 
 
