--- a/index.html
+++ b/index.html
@@ -221,6 +221,18 @@
   margin-top: 25px;   /* razmak ispod teksta */
   margin-bottom: 25px; /* prije footera */
 }
+    /* 🔹 WHISPER BOX SIZE FIX */
+#whisperInput{
+  width: 80vw !important;       /* napravi ga 80% širine ekrana */
+  max-width: 800px !important;  /* ali ne preko 800px */
+  padding: 14px 16px !important;
+  font-size: 20px !important;
+}
+
+#whisperSend{
+  padding: 14px 18px !important;
+  font-size: 18px !important;
+}
   </style>
 </head>
 <body>
@@ -350,6 +362,7 @@
 </body>
 
 </html>
+
 
 
 
