--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 }
     /* 🔹 WHISPER BOX SIZE FIX */
 #whisperInput{
-  width: 80vw !important;       /* napravi ga 80% širine ekrana */
-  max-width: 800px !important;  /* ali ne preko 800px */
+  width: 50vw !important;       /* napravi ga 80% širine ekrana */
+  max-width: 500 !important;  /* ali ne preko 800px */
   padding: 14px 16px !important;
   font-size: 20px !important;
 }
@@ -362,6 +362,7 @@
 </body>
 
 </html>
+
 
 
 
