--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 }
     /* 🔹 WHISPER BOX SIZE FIX */
 #whisperInput{
-  width: 30vw !important;       /* napravi ga 80% širine ekrana */
+  width: 200px !important;       /* napravi ga 80% širine ekrana */
   max-width: 300 !important;  /* ali ne preko 800px */
   padding: 14px 16px !important;
   font-size: 20px !important;
@@ -362,6 +362,7 @@
 </body>
 
 </html>
+
 
 
 
