--- a/index.html
+++ b/index.html
@@ -221,18 +221,6 @@
   margin-top: 25px;   /* razmak ispod teksta */
   margin-bottom: 25px; /* prije footera */
 }
-    /* 🔹 WHISPER BOX SIZE FIX */
-#whisperInput{
-  width: 200px !important;       /* napravi ga 80% širine ekrana */
-  max-width: 300 !important;  /* ali ne preko 800px */
-  padding: 14px 16px !important;
-  font-size: 20px !important;
-}
-
-#whisperSend{
-  padding: 14px 18px !important;
-  font-size: 18px !important;
-}
   </style>
 </head>
 <body>
@@ -250,7 +238,7 @@
     <small>the value is in silence. 🔇</small>
     <div class="whisper-box">
   <input id="whisperInput" type="text" maxlength="140"
-         placeholder="send a whispr. it will be heard by everyone.">
+         placeholder="send a whispr.">
   <button id="whisperSend" aria-label="send whisper">send 🔇</button>
   <div class="whisper-note" aria-hidden="true">anonymous · not saved</div>
   <div id="whisperStatus" class="whisper-status" aria-live="polite"></div>
@@ -362,6 +350,7 @@
 </body>
 
 </html>
+
 
 
 
