--- a/index.html
+++ b/index.html
@@ -436,6 +436,13 @@
 
     whisperInput.value = '';
   }
+  // klik → pošalji
+document.getElementById('whisperSend').addEventListener('click', sendWhisper);
+
+// enter u inputu → pošalji
+document.getElementById('whisperInput').addEventListener('keydown', e => {
+  if (e.key === 'Enter') { e.preventDefault(); sendWhisper(); }
+});
 
   // ⌨️ Eventi (Enter + klik)
   if (whisperSend) whisperSend.addEventListener('click', sendWhisper);
@@ -467,6 +474,7 @@
 </body>
 
 </html>
+
 
 
 
